--- a/s/Makefile
+++ b/s/Makefile
@@ -24,7 +24,16 @@ OBJS = $(OBJ1) $(OBJ2) $(OBJ3) $(OBJC)
 GTKINC = -I/usr/include/gtk-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include/ -I/usr/include/glib-2.0 -I/usr/include/cairo -I/usr/include/pango-1.0/ -I/usr/include/gdk-pixbuf-2.0 -I/usr/lib/x86_64-linux-gnu/gtk-2.0/include -I/usr/include/atk-1.0
 GTKLIB = -lgtk-x11-2.0 -lgdk-x11-2.0 -lcairo -lgobject-2.0 -lglib-2.0 -lm
 
-all: lf.gui lf.bb lf.bin lf help.txt
+all: lf.gui lf.bb lf.bin lf help.txt lf.io lf.con lf.acv lf.lic
+
+lf.io:
+	ln -sf lf.bb lf.io
+lf.con:
+	ln -sf lf.bb lf.con
+lf.acv:
+	ln -sf lf.bb lf.acv
+lf.lic:
+	ln -sf lf.bb lf.lic
 
 contrib.cc: c c/upd_contrib.sh
 	c/upd_contrib.sh
