plot: new process, unplot & qstat(autotest) broken

--- a/s/Makefile
+++ b/s/Makefile
@@ -4,9 +4,9 @@ SRC1 = main.cc node.cc util.cc cmd.cc box.cc util2.cc asnd.cc job.cc mx.cc pt.cc
 INC1 = glob.h  node.h  util.h  cmd.h  box.h  util2.h  asnd.h  job.h  mx.h  pt.h  midi.h
 OBJ1 = main.o  node.o  util.o  cmd.o  box.o  util2.o  asnd.o  job.o  mx.o  pt.o  midi.o
 
-SRC2 = expr.cc wrap.cc nz.cc guistub.cc gp.cc combo.cc pzrf.cc trk.cc
-INC2 = expr.h  wrap.h  nz.h  guistub.h  gp.h  combo.h  pzrf.h  trk.h
-OBJ2 = expr.o  wrap.o  nz.o  guistub.o  gp.o  combo.o  pzrf.o  trk.o
+SRC2 = expr.cc wrap.cc nz.cc guistub.cc combo.cc pzrf.cc trk.cc
+INC2 = expr.h  wrap.h  nz.h  guistub.h  combo.h  pzrf.h  trk.h
+OBJ2 = expr.o  wrap.o  nz.o  guistub.o  combo.o  pzrf.o  trk.o
 
 SRC3 = rf2.cc fe.cc arbox.cc grbox.cc it.cc in.cc b0.cc v.cc
 OBJ3 = rf2.o  fe.o  arbox.o  grbox.o  it.o  in.o  b0.o  v.o 
@@ -82,5 +82,5 @@ clean:
 	rm -f $(OBJS) lf.gui lf.bin lf.bb lf help.txt cfgtab.inc errtab.inc deb lflab-*.deb contrib.cc
 
 stat:
-	wc $(SRCS) $(INCS) gui.c bb.c
+	wc $(SRCS) $(INCS) gui.c bb.c | sort -n
 
